--- a/style.css
+++ b/style.css
@@ -3,10 +3,15 @@
 	position: relative;
 }
 
+.carousel-wrapper {
+	position: relative;
+}
+
 .carousel-frame {
 	width: 100%;
-	margin-bottom: 0.5em;
-	padding-bottom: 1em;
+	height: 100%;
+	margin-bottom: 5px;
+	padding-bottom: 15px;
 	position: relative;
 	overflow-x: scroll;
 	white-space: nowrap;
@@ -35,40 +40,31 @@
 	background: #ddd;
 }
 
-.carousel-frame ul {
+.carousel-frame .carousel-items {
 	margin: 0;
 	padding: 0;
 	height: 100%;
 	list-style: none;
 }
 
-.carousel-frame li.carousel-item {
-	cursor: pointer;
+.carousel-frame .carousel-item {
 	display: inline-block;
 	margin: 0 5px 0 0;
 	padding: 0;
 }
 
-.carousel-frame li.carousel-item img {
+.carousel-frame .carousel-item img {
     height: auto;
     max-width: none;
-}
-
-.carousel .carousel-caption {
-	font-size: 80%;
 }
 
 .carousel .carousel-arrow {
 	cursor: pointer;
 	opacity: 0;
 	position: absolute;
-	top: 45%;
-	width: 4em;
-	height: 4em;
-	background: rgba(100, 100, 100, 0.3);
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
+	top: 0;
+	height: calc(100% - 30px);
+	width: 30%;
 	-webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
@@ -78,27 +74,37 @@
 }
 
 .carousel .carousel-arrow.left {
-	left: 0.5em;
+	left: 0;
 }
 
 .carousel .carousel-arrow.right {
-	right: 0.5em;
+	right: 0;
 }
 
 .carousel .carousel-arrow:before {
+	position: absolute;
 	color: #fff;
 	display: inline-block;
 	font-family: "dashicons";
-	font-size: 4em;
-	height: 100%;
-	line-height: 1;
+	font-size: 50px;
+	top: 45%;
+	width: 55px;
+	height: 55px;
+	line-height: 1.1;
 	text-align: center;
+	background: rgba(100, 100, 100, 0.3);
 }
 
 .carousel .carousel-arrow.left:before {
 	content: "\f141";
+	left: 0.5em;
 }
 
 .carousel .carousel-arrow.right:before {
 	content: "\f139";
+	right: 0.5em;
+}
+
+.carousel .carousel-caption {
+	font-size: 80%;
 }
